...
        android:layout_height="wrap_content"
        android:hint="Search"
        app:startIconDrawable="@drawable/ic_search"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterSearchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="textFilter"
            android:imeOptions="actionSearch"/>

...
                app:toggleCheckedStateOnClick="false"
                android:text="Reason"
                android:textSize="14sp"
                android:checkable="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchUser"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:minHeight="32dp"
                android:minWidth="32dp"
...
